k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-gallery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: photogallery.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-gallery-frontend
                port:
                  number: 80
